gccida/c0/emit_stack_save
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_stack_save/src/explow.c:1412:24: error: must use 'enum' tag to refer to type 'save_level'
void  emit_stack_save( save_level save_level, rtx *psave, rtx after) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_stack_save/src/explow.c:1430:28: error: use of undeclared identifier 'machine_mode'
sa = assign_stack_local( ( machine_mode)mode, mode_size[mode], 0); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_stack_save/src/explow.c:1432:21: error: use of undeclared identifier 'machine_mode'
sa = gen_reg_rtx( ( machine_mode)mode); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_stack_save/src/obj/explow.o] Error 1
